# dns-spoofer

./: .travis.yml  CMakeLists.txt  README.md  dns.cpp  dns.hpp  dnsspoofer.c  dnsspoofer.cpp  example.py  setup.py  test.cpp
firewall/: CMakeLists.txt  Makefile  dnsfirewall.c  firewall_helpers.h  test.cpp
